Adding the finalized line chart for the PyBer Analysis

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -1066,7 +1066,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### creating pie chart for driver percentages"
+    "###### creating pie chart for driver percentages by city type"
    ]
   },
   {
